<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:textSize="32dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/myStats" />

    <LinearLayout
        android:id="@+id/statsNums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/openApps"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="50dp"
            android:textSize="32dp"
            android:layout_weight="3"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/interviewsOff"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="32dp"
            android:gravity="center"
            android:layout_weight="3"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/offersCount"
            android:gravity="center"
            android:textSize="32dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/openLabel"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:text="@string/open" />

        <TextView
            android:id="@+id/interviewed"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:text="@string/interviews" />

        <TextView
            android:id="@+id/offerLabel"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:text="@string/offers" />
    </LinearLayout>

        <Button
            android:id="@+id/newBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="New Application" />

        <Button
        android:id="@+id/viewallBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View Applications" />


</LinearLayout>